--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300&display=swap');h1,
-h2,
+/* h2,
 h3,
 h4,
 h5,
@@ -8,7 +8,7 @@ p,
 a{
   color: black;
   font-family: 'Montserrat', sans-serif;
-}
+} */
 
 a, 
 a:hover, 
@@ -21,6 +21,7 @@ a:active {
 .div-padding-verysmall{
   padding: .3rem;
 }
+
 .div-padding-1{
   padding: 1rem;
 }
