--- a/client/src/components/login/style.css
+++ b/client/src/components/login/style.css
@@ -75,7 +75,17 @@
 }
 
 .login-button{
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   background: transparent;
-  font-size: 1.3em;
+  font-size: 1em;
+}
+
+.loginLink{
+  margin-top: .5rem;
+  text-align: center;
+
+}
+
+.loginButton{
+  color: white;
 }
