--- a/client/src/components/nav/style.css
+++ b/client/src/components/nav/style.css
@@ -51,5 +51,6 @@
   font-family: "Bebas Neue", cursive;
   font-family: "Montserrat", sans-serif;
   font-size: 1em;
+  margin: .5rem;
   color: white;
 }
