--- a/client/src/components/login/style.css
+++ b/client/src/components/login/style.css
@@ -78,6 +78,12 @@
   /* margin-top: 1rem; */
   background: transparent;
   font-size: 1em;
+  transition: ease-in-out .4s;
+}
+
+.login-button:hover{
+  color: white;
+  background-color: black;
 }
 
 .loginLink{
