Updated User model to take a max bouldering grade and a max top roping grade. Updated the signup page to make the needed fields required along with the new needed inputs

--- a/client/src/components/signup/style.css
+++ b/client/src/components/signup/style.css
@@ -20,3 +20,14 @@
     align-items: center;
     justify-content: center;
 }
+
+.signup-grade-option{
+    margin-left: .5rem;
+}
+
+.user-grades-inputs{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center
+}
