--- a/client/src/components/home/style.css
+++ b/client/src/components/home/style.css
@@ -1,6 +1,7 @@
 .home-holds-all {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .home-background-pic-text {
@@ -51,11 +52,11 @@
 }
 
 .part3-text {
-    font-family: "Bebas Neue", cursive;
-    font-family: "Montserrat", sans-serif;
-    font-size: 1.3em;
-    color: black;
-  }
+  font-family: "Bebas Neue", cursive;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.3em;
+  color: black;
+}
 
 .part3-subtext {
   font-family: "Bebas Neue", cursive;
@@ -64,7 +65,7 @@
   color: black;
 }
 
-.holds-whats-different-info{
+.holds-whats-different-info {
   display: flex;
   flex-direction: column;
   margin: 3rem 3rem 0 3rem;
@@ -72,3 +73,19 @@
 /* .home-holds-moreinfo{
   margin: 1rem;
 } */
+
+.home-signup-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+   color: white;
+  background-color: black;
+  font-size: 1.3em;
+  transition: ease-in-out 0.4s;
+  margin: 1rem;
+}
+.home-signup-button:hover {
+  color: black;
+  background-color: transparent;
+}
