--- a/client/src/components/home/style.css
+++ b/client/src/components/home/style.css
@@ -80,7 +80,8 @@
   align-items: center;
   width: 30%;
    color: white;
-  background-color: black;
+  background-color: #342e37;
+  border-color: #342e37;
   font-size: 1.3em;
   transition: ease-in-out 0.4s;
   margin: 1rem;
