--- a/client/src/components/footer/style.css
+++ b/client/src/components/footer/style.css
@@ -15,8 +15,8 @@
   width: 10rem;
 }
 
-.holds-logo-footer{
-    margin-left: 5rem;
+.holds-logo-footer {
+  margin-left: 5rem;
 }
 
 .footer-contact {
@@ -43,10 +43,95 @@
   color: white;
 }
 .footer-smallersubtext {
-    margin-top: -.7rem;
+  margin-top: -0.7rem;
   text-align: center;
   font-family: "Bebas Neue", cursive;
   font-family: "Montserrat", sans-serif;
   font-size: 0.5em;
   color: white;
 }
+@media (max-width: 600px) {
+  .holds-logo-footer {
+    margin: 0 0 0 1rem;
+  }
+  .footer-contact {
+    margin: 0 1rem 0 0;
+  }
+  .footer-subtext{
+    font-size: .9em;
+  }
+  .footer-smallsubtext{
+    font-size: .7em;
+  }
+  .footer-logo{
+    width: 8rem;
+  }
+}
+
+@media (max-width: 325px) {
+  /* .holds-logo-footer {
+    margin: 0 0 0 1rem;
+  }
+  .footer-contact {
+    margin: 0 1rem 0 0;
+  } */
+  .footer-subtext{
+    font-size: .9em;
+  }
+  .footer-smallsubtext{
+    font-size: .6em;
+  }
+}
+@media (max-width: 305px) {
+  /* .holds-logo-footer {
+    margin: 0 0 0 1rem;
+  }
+  .footer-contact {
+    margin: 0 1rem 0 0;
+  } */
+  .footer-subtext{
+    font-size: .9em;
+  }
+  .footer-smallsubtext{
+    font-size: .5em;
+  }
+}
+
+@media (max-width: 300px) {
+  .logo-text {
+    font-size: 3em;
+  }
+  .footer-logo{
+    width: 6rem;
+  }
+}
+
+
+@media (max-width: 300px) {
+  .holds-contact-info{
+    flex-direction: column;
+  }
+  .holds-logo-footer {
+    margin: 0;
+  }
+  .footer-contact {
+    margin: 0;
+  }
+}
+
+/* 
+@media (max-width: 269px) {
+  .footer-subtext{
+    font-size: .7em;
+  }
+  .footer-smallsubtext{
+    font-size: .3em;
+  }
+  .footer-logo{
+    width: 5rem;
+  }
+  .footer-smallersubtext{
+    margin-top: -0.4rem;
+    font-size: 0.3em;
+  }
+} */
