--- a/client/src/components/nav/style.css
+++ b/client/src/components/nav/style.css
@@ -44,13 +44,22 @@
 
 .nav-undernav-banner {
   text-align: center;
-  width: 45%;
+  width: 55%;
 }
 
-.undernav-text{
+.undernav-text {
   font-family: "Bebas Neue", cursive;
   font-family: "Montserrat", sans-serif;
   font-size: 1em;
-  margin: .5rem;
+  margin: 0.5rem;
   color: white;
+}
+
+@media (max-width: 460px) {
+  .header-section{
+    flex-direction: column;
+  }
+  .header-section{
+    justify-content: space-around;
+  }
 }
