--- a/client/src/index.css
+++ b/client/src/index.css
@@ -197,7 +197,7 @@ code {
 }
 
 .banner-h-width {
-  width: 20%;
+  width: 30%;
 }
 
 .banner-p-width {
@@ -208,7 +208,7 @@ code {
   margin: 1rem;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-evenly;
 }
 
@@ -221,6 +221,7 @@ code {
   font-family: "Bebas Neue", cursive;
   font-family: "Montserrat", sans-serif;
   font-size: 1.3em;
+  font-weight: 600;
   color: black;
 }
 
@@ -433,7 +434,7 @@ code {
   flex-direction: column;
   /* align-items: center; */
   justify-content: center;
-  margin: .5rem;
+  margin: 0.5rem;
 }
 .send-item-buttons {
   display: flex;
@@ -526,5 +527,86 @@ code {
 
   .heading p {
     font-size: 1.5rem;
+  }
+}
+/* =============================================== media queries for mobile =============================================== */
+/* @media (max-width: 1450px) {
+  .logo-text{
+    font-size: 6.5em;
+  }
+} */
+
+@media (max-width: 1250px) {
+  .logo-text {
+    font-size: 5.5em;
+  }
+}
+
+@media (max-width: 1070px) {
+  .logo-text {
+    font-size: 4.5em;
+  }
+  .logo-subtext {
+    font-size: 1.3em;
+  }
+}
+
+@media (max-width: 880px) {
+  .info-background-pic-text {
+    justify-content: space-around;
+  }
+}
+
+@media (max-width: 820px) {
+  .info-holds-3part-page-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .info-info-part {
+    width: 80%;
+  }
+  .margin-top2 {
+    margin-top: 1rem;
+  }
+}
+
+@media (max-width: 750px) {
+  .banner-p-width {
+    width: 30%;
+  }
+}
+
+@media (max-width: 660px) {
+  .logo-text {
+    font-size: 3.5em;
+    font-weight: 600;
+  }
+}
+
+@media (max-width: 530px) {
+  /* .banner-p-width,
+  .banner-h-width{
+    margin: 0 2rem 0 2rem;
+  }
+  .info-background-pic-text{
+    justify-content: space-between;
+  } */
+  .info-background-pic-text {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .logo-text {
+    text-align: center;
+  }
+  .banner-p-width,
+  .banner-h-width {
+    width: 80%;
+  }
+  .banner-p-width{
+    margin-top: 1rem;
+  }
+  .logo-subtext{
+    font-weight: 600;
   }
 }
