--- a/client/src/index.css
+++ b/client/src/index.css
@@ -148,7 +148,7 @@ code {
   display: flex;
   align-items: center;
   text-align: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 .user-grades-inputs-col {
   display: flex;
