--- a/client/src/index.css
+++ b/client/src/index.css
@@ -382,6 +382,14 @@ code {
   align-items: center;
 }
 
+.dash-holds-calender{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
 .dash-mapping {
   /* margin-top: 5rem; */
   display: flex;
